--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Tiyainko/econ8320-assignment-03/blob/main/Lesson.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "536b3938-979d-4329-91ff-760d710599d9",
       "metadata": {
         "id": "536b3938-979d-4329-91ff-760d710599d9"
@@ -38,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "10dbb263-3660-4bc7-9685-886f71f2311e",
       "metadata": {
         "id": "10dbb263-3660-4bc7-9685-886f71f2311e"
@@ -87,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "a8b9ff8c-c2bc-4924-9bd0-3967ba3a1163",
       "metadata": {
         "tags": [],
@@ -95,14 +105,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a8b9ff8c-c2bc-4924-9bd0-3967ba3a1163",
-        "outputId": "c6df4427-a899-4e81-c344-7d45074cc4a5"
+        "outputId": "ddceb8ca-1321-416d-a8d7-299ed07f18be"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.Sandwich object at 0x7e55b07b95b0>\n"
+            "<__main__.Sandwich object at 0x798680971580>\n"
           ]
         }
       ],
@@ -152,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "id": "7902f9ab-97d2-46ec-88f7-5ee3f32f2af9",
       "metadata": {
         "id": "7902f9ab-97d2-46ec-88f7-5ee3f32f2af9"
@@ -182,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "ca71efa9-212c-48d1-91b4-bee6246f927b",
       "metadata": {
         "id": "ca71efa9-212c-48d1-91b4-bee6246f927b"
@@ -220,27 +230,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "77ac0b50-556d-4a07-9b7f-428cc0e34444",
       "metadata": {
         "tags": [],
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        },
-        "id": "77ac0b50-556d-4a07-9b7f-428cc0e34444",
-        "outputId": "ddb0feed-44b6-409a-e85b-0f84ce1ca41c"
+        "id": "77ac0b50-556d-4a07-9b7f-428cc0e34444"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (ipython-input-21888707.py, line 16)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-21888707.py\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    if (self.bread==other.bread) and\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "class Sandwich(object):\n",
         "    def __init__(self, owner, bread='white'):\n",
@@ -306,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "id": "40d3feca-e1db-4c4f-b7a9-1bbf7569c681",
       "metadata": {
         "tags": [],
@@ -371,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "id": "3383dd5c-9418-4e38-ad93-5e720d30c87d",
       "metadata": {
         "id": "3383dd5c-9418-4e38-ad93-5e720d30c87d"
@@ -427,14 +423,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "id": "1a91740a-34da-47ca-8608-9d91273e747f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1a91740a-34da-47ca-8608-9d91273e747f",
-        "outputId": "88afa337-45c9-4c05-98d7-90ee20714bf0"
+        "outputId": "0bc67816-2c3d-4a24-ef4e-1cf1a2667d30"
       },
       "outputs": [
         {
@@ -445,7 +441,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ],
       "source": [
@@ -483,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "id": "d00319a5-2ff9-4d30-bc52-70f9751c96cf",
       "metadata": {
         "id": "d00319a5-2ff9-4d30-bc52-70f9751c96cf"
@@ -567,14 +563,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "id": "38762cf4-138d-4a93-81ee-5ca7458a537a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "38762cf4-138d-4a93-81ee-5ca7458a537a",
-        "outputId": "6a35d1e1-7afc-480b-e240-0cb4eacd2752"
+        "outputId": "32377daf-dbb3-48c7-a7ef-1a637393a121"
       },
       "outputs": [
         {
@@ -673,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "id": "ff828581-99ed-444e-80eb-05f2842d1e12",
       "metadata": {
         "id": "ff828581-99ed-444e-80eb-05f2842d1e12"
@@ -689,16 +685,12 @@
         "        self.real = real\n",
         "        self.imag = imag\n",
         "\n",
-        "    def __repr__(self):\n",
-        "        return f\"{self.real} + {self.imag}i\"\n",
-        "\n",
         "    def conjugate(self):\n",
-        "        \"\"\"Return the complex conjugate as a new ComplexNumber object\"\"\"\n",
         "        return ComplexNumber(self.real, -self.imag)\n",
         "\n",
         "    def __abs__(self):\n",
-        "        \"\"\"Return the magnitude of the complex number\"\"\"\n",
         "        return math.sqrt(self.real**2 + self.imag**2)\n",
+        "\n",
         "    def __lt__(self, other):\n",
         "        return abs(self) < abs(other)\n",
         "\n",
@@ -718,17 +710,14 @@
         "        return ComplexNumber(self.real - other.real, self.imag - other.imag)\n",
         "\n",
         "    def __mul__(self, other):\n",
-        "        real = self.real * other.real - self.imag * other.imag\n",
-        "        imag = self.real * other.imag + self.imag * other.real\n",
-        "        return ComplexNumber(real, imag)\n",
+        "        # (a+bi)(c+di) = (ac - bd) + (ad + bc)i\n",
+        "        real_part = self.real*other.real - self.imag*other.imag\n",
+        "        imag_part = self.real*other.imag + self.imag*other.real\n",
+        "        return ComplexNumber(real_part, imag_part)\n",
         "\n",
         "    def __truediv__(self, other):\n",
-        "        denominator = other.real**2 + other.imag**2\n",
-        "        if denominator == 0:\n",
-        "            raise ZeroDivisionError(\"division by zero in complex number\")\n",
-        "        real = (self.real * other.real + self.imag * other.imag) / denominator\n",
-        "        imag = (self.imag * other.real - self.real * other.imag) / denominator\n",
-        "        return ComplexNumber(real, imag)\n"
+        "        # (a+bi)/(c+di) = ((ac+bd) + (bc-ad)i) / (c^2+d^2)\n",
+        "        denom = o\n"
       ]
     },
     {
@@ -772,17 +761,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
-        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
+        "outputId": "8dd59af8-649a-4073-e363-36081f8a52e1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.8\n",
+            "3.8\n",
+            "8.0\n",
+            "Half-tuition\n"
+          ]
+        }
+      ],
       "source": [
         "#si-academic-record\n",
         "\n",
-        "class CourseRecord:\n",
-        "    \"\"\"Represents a single course entry in the transcript\"\"\"\n",
+        "class Course:\n",
         "    def __init__(self, course, year, semester, credits, grade):\n",
         "        self.course = course\n",
         "        self.year = year\n",
@@ -790,20 +793,7 @@
         "        self.credits = credits\n",
         "        self.grade = grade\n",
         "\n",
-        "    def grade_points(self):\n",
-        "        \"\"\"Convert letter grade to GPA points\"\"\"\n",
-        "        scale = {\n",
-        "            \"A\": 4.0, \"A-\": 3.7,\n",
-        "            \"B+\": 3.3, \"B\": 3.0, \"B-\": 2.7,\n",
-        "            \"C+\": 2.3, \"C\": 2.0, \"C-\": 1.7,\n",
-        "            \"D+\": 1.3, \"D\": 1.0, \"D-\": 0.7,\n",
-        "            \"F\": 0.0\n",
-        "        }\n",
-        "        return scale.get(self.grade, 0.0)\n",
-        "\n",
-        "\n",
         "class StudentRecord:\n",
-        "    \"\"\"Represents a student's academic record\"\"\"\n",
         "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address, transcript=None):\n",
         "        self.firstName = firstName\n",
         "        self.lastName = lastName\n",
@@ -816,28 +806,29 @@
         "        self.transcript = transcript if transcript is not None else []\n",
         "\n",
         "    def newCourse(self, course, year, semester, credits, grade):\n",
-        "        \"\"\"Add a new course to the transcript\"\"\"\n",
-        "        self.transcript.append(CourseRecord(course, year, semester, credits, grade))\n",
-        "\n",
-        "    def cumGPA(self):\n",
-        "        \"\"\"Calculate cumulative GPA\"\"\"\n",
-        "        total_points = sum(c.grade_points() * c.credits for c in self.transcript)\n",
-        "        total_credits = sum(c.credits for c in self.transcript)\n",
-        "        return round(total_points / total_credits, 2) if total_credits > 0 else 0.0\n",
-        "\n",
-        "    def semGPA(self, year, semester):\n",
-        "        \"\"\"Calculate GPA for a given semester and year\"\"\"\n",
-        "        courses = [c for c in self.transcript if c.year == year and c.semester == semester]\n",
-        "        total_points = sum(c.grade_points() * c.credits for c in courses)\n",
-        "        total_credits = sum(c.credits for c in courses)\n",
-        "        return round(total_points / total_credits, 2) if total_credits > 0 else 0.0\n",
+        "        self.transcript.append(Course(course, year, semester, credits, grade))\n",
         "\n",
         "    def credits(self):\n",
-        "        \"\"\"Total accumulated credits\"\"\"\n",
-        "        return float(sum(c.credits for c in self.transcript))\n",
+        "        return float(sum(course.credits for course in self.transcript))\n",
+        "\n",
+        "    def cumGPA(self):\n",
+        "        total_points = 0\n",
+        "        total_credits = 0\n",
+        "        for c in self.transcript:\n",
+        "            total_points += c.grade * c.credits\n",
+        "            total_credits += c.credits\n",
+        "        return total_points / total_credits if total_credits > 0 else 0.0\n",
+        "\n",
+        "    def semGPA(self, year, semester):\n",
+        "        total_points = 0\n",
+        "        total_credits = 0\n",
+        "        for c in self.transcript:\n",
+        "            if c.year == year and c.semester.lower() == semester.lower():\n",
+        "                total_points += c.grade * c.credits\n",
+        "                total_credits += c.credits\n",
+        "        return total_points / total_credits if total_credits > 0 else 0.0\n",
         "\n",
         "    def scholarship(self):\n",
-        "        \"\"\"Determine scholarship eligibility based on cumulative GPA\"\"\"\n",
         "        gpa = self.cumGPA()\n",
         "        if gpa >= 3.9:\n",
         "            return \"Full-ride\"\n",
@@ -848,8 +839,14 @@
         "        else:\n",
         "            return \"Not Eligible\"\n",
         "\n",
-        "    def __repr__(self):\n",
-        "        return f\"StudentRecord({self.firstName} {self.lastName}, GPA={self.cumGPA()}, Credits={self.credits()})\"\n"
+        "# Example usage:\n",
+        "student = StudentRecord(\"Jane\", \"Doe\", \"2005-05-12\", \"Lincoln High\", \"Springfield\", \"IL\", \"Computer Science\", \"123 Main St\")\n",
+        "student.newCourse(\"Calculus\", 2024, \"Fall\", 4, 3.7)\n",
+        "student.newCourse(\"Physics\", 2024, \"Fall\", 4, 3.9)\n",
+        "print(student.cumGPA())\n",
+        "print(student.semGPA(2024, \"Fall\"))\n",
+        "print(student.credits())\n",
+        "print(student.scholarship())\n"
       ]
     }
   ],
@@ -872,7 +869,8 @@
       "version": "3.9.13"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
